src/components/EnvironmentSaving/EnvironmentSaving.scss
@import './mixins';
@import './variables';

sup {
  top: -.5em;
  font-size: 0.6em;
}
.envSavingWrap {
  font-family: 'Open Sans';
  width: 33%;
  display: inline-block;
  text-align: center;
  vertical-align: top;
}
.small .envSavingImage{
  height: 38px;
}
.envSavingImage {
  height: 100%;
}
.envSavingNumber {
  margin-top: 15px;
  line-height: 24px;
  font-size: 18px;
  font-weight: bold;
}
.envSavingLabel {
  margin-bottom: 6px;
  font-size: 14px;
}
.roble {
  &.envSavingNumber {
    font-size: 22px;
    font-family: "roble_alt_extrabold";
  }
  &.envSavingLabel {
    font-family: "roble_alt_lightlight";
  }
}

